1.9.05 

      - improved performance of Adj::q_bb(int, int) for sparse matrices

      - fixed a bug in Adj_envelope::q_xx(int, int) brought in version 1.9.03

      - fixed a bug in matvec/vecbase.h (missing test in operator>>)
      
      New version of matvec C++ template library is 1.0.00

	
1.9.04 2007-10-20

    - new option --cov-band for gama-local

	--cov-band   covariance matrix of adjusted parameters in XML output 
                     n  = -1  for full covariance matrix (implicit value)
                     n >=  0  covariances are computed only for bandwidth n
	
    - enhanced warning text for gama-local when two identical poins (identical
      coordinates) are found; gama-local stops

===================================================================
RCS file: /sources/gama/gama/gama-local/gama-local-main.h,v
retrieving revision 1.7
diff -u -r1.7 gama-local-main.h
--- gama-local/gama-local-main.h	29 Jun 2007 17:50:31 -0000	1.7
+++ gama-local/gama-local-main.h	2 Aug 2007 11:56:35 -0000
@@ -365,6 +365,11 @@
         ApproximateCoordinates(&acord, cout);
 
       }
+    catch(GaMaLib::Exception e)
+      {
+        cerr << e.text << endl;
+        return 1;
+      }
     catch(...)
       {
         cerr << "Gama / Acord: approximate coordinates failed\n\n";
Index: lib/gamalib/local/orientation.cpp
===================================================================
RCS file: /sources/gama/gama/lib/gamalib/local/orientation.cpp,v
retrieving revision 1.2
diff -u -r1.2 orientation.cpp
--- lib/gamalib/local/orientation.cpp	26 Jun 2007 15:04:05 -0000	1.2
+++ lib/gamalib/local/orientation.cpp	2 Aug 2007 11:56:36 -0000
@@ -27,7 +27,8 @@
 #include <gamalib/cluster.h>
 #include <gamalib/local/gamadata.h>
 #include <algorithm>
-
+#include <sstream>
+#include <iomanip>
 
 using namespace GaMaLib;
 
@@ -92,7 +93,36 @@
           PointData::const_iterator pb = PL.find(direction->to());
           if (pb != PL.end() && (*pb).second.test_xy())
             {